Fix bottom-of-content spacing for older browsers

--- a/app/styles/_global.scss
+++ b/app/styles/_global.scss
@@ -30,9 +30,9 @@ section {
   }
 
   &:last-of-type {
-    margin-bottom: 50vh;
   }
 }
+.content-spacer {padding-bottom:25em;}
 
 @media (max-width: 450px) {
   section {
