--- a/app/styles/_stage.scss
+++ b/app/styles/_stage.scss
@@ -82,7 +82,7 @@
   }
 
   .footer-extend {
-    background-image: url(/images/footer_extend.svg);
+    background-image: url(/images/footer_extend.png);
     background-repeat:no-repeat;
     background-position: center center;
   }
